--- a/WpfAppWocoNF4/WpfAppWocoNF4.csproj
+++ b/WpfAppWocoNF4/WpfAppWocoNF4.csproj
@@ -58,6 +58,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Calculator.cs" />
     <Compile Include="Location.cs" />
     <Compile Include="Models\ClosedShell.cs" />
     <Compile Include="Repository.cs" />
